--- a/template/README.md.jinja
+++ b/template/README.md.jinja
@@ -1,6 +1,7 @@
 # {{project_name | lower}}
 
-This repository has been created using the [cradle](https://github.com/cvxgrp/cradle) cli.
+This repository has been created using the
+[cradle](https://github.com/cvxgrp/cradle) cli.
 
 Simple Notebook repo without heavy ci/cd.
 
