--- a/template/README.md.jinja
+++ b/template/README.md.jinja
@@ -1,7 +1,9 @@
 # {{ project_name }}
 
-This repository has been created using the
-[cradle](https://github.com/cvxgrp/cradle) cli.
+[![License: MIT](https://img.shields.io/badge/License-MIT-yellow.svg)](LICENSE.txt)
+[![Marimo]({{ repository }}/actions/workflows/ci.yml/badge.svg)]({{ repository }}/actions/workflows/marimo.yml)
+[![Created with Cradle](https://img.shields.io/badge/Created%20with-Cradle-blue?style=flat-square)](https://github.com/cvxgrp/cradle)
+
 
 [![Open in GitHub Codespaces](https://github.com/codespaces/badge.svg)]({{ repository }})
 
