--- a/template/README.md.jinja
+++ b/template/README.md.jinja
@@ -1,7 +1,7 @@
 # {{ project_name }}
 
 [![License: MIT](https://img.shields.io/badge/License-MIT-yellow.svg)](LICENSE.txt)
-[![Marimo]({{ repository }}/actions/workflows/marimo.yml/badge.svg)]({{ repository }}/actions/workflows/marimo.yml)
+[![MARIMO]({{ repository }}/actions/workflows/marimo.yml/badge.svg?branch=main)]({{ repository }}/actions/workflows/marimo.yml)
 [![Created with Cradle](https://img.shields.io/badge/Created%20with-Cradle-blue?style=flat-square)](https://github.com/tschm/experiments)
 
 [![Open in GitHub Codespaces](https://github.com/codespaces/badge.svg)]({{ repository }})
