--- a/template/README.md.jinja
+++ b/template/README.md.jinja
@@ -2,7 +2,7 @@
 
 [![License: MIT](https://img.shields.io/badge/License-MIT-yellow.svg)](LICENSE.txt)
 [![MARIMO]({{ repository }}/actions/workflows/marimo.yml/badge.svg)]({{ repository }}/actions/workflows/marimo.yml)
-[![Created with Cradle](https://img.shields.io/badge/Created%20with-Cradle-blue?style=flat-square)](https://github.com/tschm/experiments)
+[![Created with qCradle](https://img.shields.io/badge/Created%20with-qCradle-blue?style=flat-square)](https://github.com/tschm/experiments)
 
 [![Open in GitHub Codespaces](https://github.com/codespaces/badge.svg)]({{ repository }})
 
