--- a/template/README.md.jinja
+++ b/template/README.md.jinja
@@ -1,6 +1,6 @@
 # {{ project_name }}
 
-[![License: MIT](https://img.shields.io/badge/License-MIT-yellow.svg)](LICENSE.txt)
+[![License: MIT](https://img.shields.io/badge/License-MIT-yellow.svg)](LICENSE)
 [![MARIMO]({{ repository }}/actions/workflows/marimo.yml/badge.svg)]({{ repository }}/actions/workflows/marimo.yml)
 [![Created with qCradle](https://img.shields.io/badge/Created%20with-qCradle-blue?style=flat-square)](https://github.com/tschm/experiments)
 
