question about devcontainer

--- a/template/README.md.jinja
+++ b/template/README.md.jinja
@@ -4,7 +4,9 @@
 [![MARIMO]({{ repository }}/actions/workflows/marimo.yml/badge.svg)]({{ repository }}/actions/workflows/marimo.yml)
 [![Created with qCradle](https://img.shields.io/badge/Created%20with-qCradle-blue?style=flat-square)](https://github.com/tschm/experiments)
 
+{% if use_devcontainer %}
 [![Open in GitHub Codespaces](https://github.com/codespaces/badge.svg)]({{ repository }})
+{% endif %}
 
 ## Getting Started
 
