--- a/template/.github/actions/tag/action.yml.jinja
+++ b/template/.github/actions/tag/action.yml.jinja
@@ -40,13 +40,15 @@ runs:
     # -----------------------------------------------------------------------------
     # Step 3: (optional) build DockerImage
     # -----------------------------------------------------------------------------
+{% if use_docker %}
     - name: Install podman
-      shelL: bash
+      shell: bash
       run: |
-        sudo apt-get update
-        sudo apt-get install -y podman
+        sudo apt-get update -qq
+        sudo DEBIAN_FRONTEND=noninteractive apt-get install -y podman
 
     - name: Login to GitHub container registry
       shell: bash
       run: |
         podman login ghcr.io -u ${{ github.actor }} -p ${{ inputs.github_token }}
+{% endif %}
