towards including release of a Dockerimage

--- a/template/.github/actions/tag/action.yml.jinja
+++ b/template/.github/actions/tag/action.yml.jinja
@@ -50,5 +50,5 @@ runs:
     - name: Login to GitHub container registry
       shell: bash
       run: |
-        podman login ghcr.io -u ${% raw %${{ github.actor }}{% endraw %} -p ${% raw %${{ inputs.github_token }}{% endraw %}
+        podman login ghcr.io -u ${% raw %}${{ github.actor }}{% endraw %} -p ${% raw %}${{ inputs.github_token }}{% endraw %}
 {% endif %}
