towards including release of a Dockerimage

--- a/template/{% if use_docker %}docker{% endif %}/Dockerfile.jinja
+++ b/template/{% if use_docker %}docker{% endif %}/Dockerfile.jinja
@@ -12,13 +12,13 @@ RUN useradd -m app_user && \
     chown app_user:app_user /app
 
 # Copy and install dependencies first for better caching
-COPY --chown=app_user:app_user uv.lock pyproject.toml README.md /app/
+COPY --chown=app_user:app_user requirements.txt README.md notebooks /app/
 
 # No dev dependencies,
-RUN uv sync --frozen --no-dev && rm -rf /uv /bin/uv && rm uv.lock pyproject.toml
+RUN uv pip install --no-cache-dir -r requirements.txt && \
+    uv pip install --no-cache-dir marimo
 
-# Copy the application code
-COPY --chown=app_user:app_user src/{{ project_name }} ./{{ project_name }}
+RUN rm -rf /uv /bin/uv
 
 # Switch to non-root user
 USER app_user
@@ -28,7 +28,7 @@ EXPOSE 8080
 
 # Set environment variables
 ENV PYTHONPATH=/app
-ENV PYTHONUNBUFFERED=1
+ENV HOST=0.0.0.0
 
 # Run the server
 CMD [".venv/bin/python", "{{ project_name }}/server.py"]
