towards including release of a Dockerimage

--- a/template/{% if use_docker %}docker{% endif %}/Dockerfile.dockerignore.jinja
+++ b/template/{% if use_docker %}docker{% endif %}/Dockerfile.dockerignore.jinja
@@ -3,10 +3,9 @@
 # Ignore Everything
 **
 
-!pyproject.toml
-!uv.lock
+!requirements.txt
 !README.md
-!src/{{ project_name }}
+!notebooks
 
 **/__pycache__
 **/*.pyc
