remove docker.yml step

--- a/template/.github/actions/tag/action.yml.jinja
+++ b/template/.github/actions/tag/action.yml.jinja
@@ -44,12 +44,12 @@ runs:
       shell: bash
       run: |
           sudo apt-get update -qq
-          sudo DEBIAN_FRONTEND=noninteractive apt-get install -y docker.io
+          sudo DEBIAN_FRONTEND=noninteractive apt-get install -y podman
 
     - name: Login to GitHub container registry
       shell: bash
       run: |
-        docker login ghcr.io \
+        podman login ghcr.io \
         -u {% raw %}${{ github.actor }}{% endraw %} \
         -p {% raw %}${{ inputs.github_token }}{% endraw %}
 
@@ -58,7 +58,7 @@ runs:
       run: |
         pwd
         ls -all
-        docker build \
+        podman build \
           --tag ghcr.io/{% raw %}${{ github.repository }}:${{ steps.tag_version.outputs.new_tag }}{% endraw %} \
           -f {% raw %}${{ inputs.dockerfile-path }}{% endraw %} \
           .
