--- a/template/.github/workflows/release.yml.jinja
+++ b/template/.github/workflows/release.yml.jinja
@@ -28,33 +28,42 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-    - name: Install docker
-      shell: bash
-      run: |
-          sudo apt-get update -qq
-          sudo DEBIAN_FRONTEND=noninteractive apt-get install -y podman
 
-    - name: Login to GitHub container registry
-      shell: bash
-      run: |
-        podman login ghcr.io \
-        -u {% raw %}${{ github.actor }}{% endraw %} \
-        -p {% raw %}${{ inputs.github_token }}{% endraw %}
+      - name: "Build and publish the Container"
+        uses: ./.github/actions/docker
+        with:
+          github_actor: ${{ github.actor }}
+          github_repository: ${{ github.repository }}
+          tag: ${{ needs.build.output.new_tag }}
+          github_token: ${{ secrets.github_token }}
 
-    - name: Build container image
-      shell: bash
-      run: |
-        pwd
-        ls -all
-        podman build \
-          --tag ghcr.io/{% raw %}${{ github.repository }}:${{ needs.build.outputs.new_tag }}{% endraw %} \
-          -f docker/Dockerfile \
-          .
+{#    - name: Install docker#}
+{#      shell: bash#}
+{#      run: |#}
+{#          sudo apt-get update -qq#}
+{#          sudo DEBIAN_FRONTEND=noninteractive apt-get install -y podman#}
 
-    - name: Push container image
-      shell: bash
-      run: |
-        podman push ghcr.io/{% raw %}${{ github.repository }}:${{ needs.build.outputs.new_tag }}{% endraw %}
+{#    - name: Login to GitHub container registry#}
+{#      shell: bash#}
+{#      run: |#}
+{#        podman login ghcr.io \#}
+{#        -u {% raw %}${{ github.actor }}{% endraw %} \#}
+{#        -p {% raw %}${{ inputs.github_token }}{% endraw %}#}
+
+{#    - name: Build container image#}
+{#      shell: bash#}
+{#      run: |#}
+{#        pwd#}
+{#        ls -all#}
+{#        podman build \#}
+{#          --tag ghcr.io/{% raw %}${{ github.repository }}:${{ needs.build.outputs.new_tag }}{% endraw %} \#}
+{#          -f docker/Dockerfile \#}
+{#          .#}
+
+{#    - name: Push container image#}
+{#      shell: bash#}
+{#      run: |#}
+{#        podman push ghcr.io/{% raw %}${{ github.repository }}:${{ needs.build.outputs.new_tag }}{% endraw %}#}
 
 {% endif %}
   debug:
@@ -63,4 +72,5 @@ jobs:
     steps:
       - name: Output
         run: |
-          echo "Repository {% raw %}${{ github.repository }}{% endraw %}
+          echo "Repository {% raw %}${{ github.repository }}{% endraw %}"
+          echo "Tag {% raw %}${{ needs.build.outputs.new_tag }}{% endraw %}"
