--- a/template/.github/workflows/release.yml.jinja
+++ b/template/.github/workflows/release.yml.jinja
@@ -19,6 +19,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Generate Tag
+        id: tag
         uses: tschm/cradle/actions/tag@main
         with:
           github_token: {% raw %}${{ secrets.GITHUB_TOKEN }}{% endraw %}
