--- a/template/.github/workflows/release.yml.jinja
+++ b/template/.github/workflows/release.yml.jinja
@@ -37,7 +37,6 @@ jobs:
           github_repository: {% raw %}${{ github.repository }}{% endraw %}
           tag: {% raw %}${{ needs.build.output.new_tag }}{% endraw %}
           github_token: {% raw %}${{ secrets.github_token }}{% endraw %}
-
 {% endif %}
 
 {% if use_latex %}
@@ -50,11 +49,7 @@ jobs:
         uses: tschm/cradle/actions/latex@main
         with:
           paper: paper/document.tex
-          #github_actor: {% raw %}${{ github.actor }}{% endraw %}
-          #github_repository: {% raw %}${{ github.repository }}{% endraw %}
-          #tag: {% raw %}${{ needs.build.output.new_tag }}{% endraw %}
-          #github_token: {% raw %}${{ secrets.github_token }}{% endraw %}
-
+          create_release: true
 {% endif %}
 
   debug:
