--- a/template/.github/workflows/release.yml.jinja
+++ b/template/.github/workflows/release.yml.jinja
@@ -9,7 +9,7 @@ permissions:
   packages: write
 
 jobs:
-  build:
+  tagging:
     runs-on: ubuntu-latest
     outputs:
       new_tag: {% raw %}${{ steps.tag.outputs.new_tag }}{% endraw %}
@@ -35,21 +35,24 @@ jobs:
         with:
           github_actor: {% raw %}${{ github.actor }}{% endraw %}
           github_repository: {% raw %}${{ github.repository }}{% endraw %}
-          tag: {% raw %}${{ needs.build.output.new_tag }}{% endraw %}
+          tag: {% raw %}${{ needs.tagging.outputs.new_tag }}{% endraw %}
           github_token: {% raw %}${{ secrets.github_token }}{% endraw %}
 {% endif %}
 
 {% if use_latex %}
   latex:
     runs-on: ubuntu-latest
-    needs: build
+    needs: tagging
     steps:
+      - name: "Output tag"
+        run: |
+          echo "Tag: ${{ needs.tagging.outputs.new_tag }}"
 
       - name: "Build and publish the LaTeX document"
         uses: tschm/cradle/actions/latex@main
         with:
           paper: paper/document.tex
-          create_release: true
+          tag: ${{ needs.tagging.outputs.new_tag }}
 {% endif %}
 
   debug:
