latex and pre-commit separated

--- a/template/.github/workflows/release.yml.jinja
+++ b/template/.github/workflows/release.yml.jinja
@@ -52,7 +52,7 @@ jobs:
         uses: tschm/cradle/actions/latex@main
         with:
           paper: paper/document.tex
-          tag: % raw %}${{ needs.tagging.outputs.new_tag }}{% endraw %}
+          tag: {% raw %}${{ needs.tagging.outputs.new_tag }}{% endraw %}
 {% endif %}
 
   debug:
