--- a/template/.github/workflows/release.yml.jinja
+++ b/template/.github/workflows/release.yml.jinja
@@ -57,9 +57,9 @@ jobs:
 
   debug:
     runs-on: ubuntu-latest
-    needs: build
+    needs: tagging
     steps:
       - name: Output
         run: |
           echo "Repository {% raw %}${{ github.repository }}{% endraw %}"
-          echo "Tag {% raw %}${{ needs.build.outputs.new_tag }}{% endraw %}"
+          echo "Tag {% raw %}${{ needs.tagging.outputs.new_tag }}{% endraw %}"
