--- a/template/README.md.jinja
+++ b/template/README.md.jinja
@@ -1,4 +1,4 @@
-# {{ project_name }}
+# 🧪 {{ project_name }}
 
 [![License: MIT](https://img.shields.io/badge/License-MIT-yellow.svg)](LICENSE)
 [![MARIMO]({{ repository }}/actions/workflows/marimo.yml/badge.svg)]({{ repository }}/actions/workflows/marimo.yml)
@@ -6,9 +6,9 @@
 
 [![Open in GitHub Codespaces](https://github.com/codespaces/badge.svg)]({{ repository }})
 
-## Getting Started
+## 🚀 Getting Started
 
-### **Set Up Environment**
+### **🔧 Set Up Environment**
 
 ```bash
 make install
@@ -24,7 +24,7 @@ uv add/remove requests  # for main dependencies
 uv add/remove requests --dev  # for dev dependencies
 ```
 
-### **Configure Pre-commit Hooks**
+### **✅ Configure Pre-commit Hooks**
 
 ```bash
 make fmt
@@ -32,16 +32,16 @@ make fmt
 
 Installs hooks to maintain code quality and formatting.
 
-## Development Commands
+## 🛠️ Development Commands
 
 ```bash
 make marimo  # Start Marimo notebooks
 ```
 
-## Contributing
+## 👥 Contributing
 
-- Fork the repository
-- Create your feature branch (git checkout -b feature/amazing-feature)
-- Commit your changes (git commit -m 'Add some amazing feature')
-- Push to the branch (git push origin feature/amazing-feature)
-- Open a Pull Request
+- 🍴 Fork the repository
+- 🌿 Create your feature branch (git checkout -b feature/amazing-feature)
+- 💾 Commit your changes (git commit -m 'Add some amazing feature')
+- 🚢 Push to the branch (git push origin feature/amazing-feature)
+- 🔍 Open a Pull Request
