--- a/template/.github/workflows/release.yml.jinja
+++ b/template/.github/workflows/release.yml.jinja
@@ -43,6 +43,36 @@ jobs:
           tag_name: ${{ github.event.inputs.tag }}  # Use the provided tag
           generate_release_notes: true  # Automatically generate notes from commits
 
+  marimo:
+    runs-on: ubuntu-latest  # Use the latest Ubuntu runner
+    permissions:
+      contents: read
+    steps:
+      - uses: jebel-quant/marimushka/@v0.1.4
+        with:
+          notebooks_wasm: ''
+          notebooks: 'notebooks'
+          apps: ''
+
+  book:
+    permissions:
+      pages: write            # Permission to deploy to Pages
+      id-token: write         # Permission to verify deployment origin
+    runs-on: ubuntu-latest
+    needs: [ marimo ]           # This job depends on both jupyter and marimo jobs
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Publish book    # specify the path to avoid direct exposure of marimushka
+        id: deployment
+        uses: tschm/cradle/actions/book@v0.2.0
+        with:
+          title: "My project"
+          links: |
+            {
+              "Notebooks": "./marimushka/index.html"
+            }
 
 {% if use_latex %}
   # Job to build and publish LaTeX document (only included if use_latex is true)
